# RBIR

./: Cargo.toml  README.md  data.toml  rust-toolchain.toml
.github/workflows/: autogen.yml  ci.yml
libraries/: apache_arrow_rust.md  apache_avro_rust.md  apache_datafusion.md  apache_hudi_rust.md  apache_iceberg_rust.md  apache_opendal.md  apache_orc_rust.md  apache_paimon_rust.md  apache_parquet_rust.md
projects/: apache_datafusion-ballista.md  apache_datafusion_comet.md  apache_horaedb_(incubating).md  arroyo.md  blaze.md  daft.md  databend.md  fluvio.md  glaredb.md  greptimedb.md  influxdb.md  lancedb.md  paradedb.md  quickwit.md  risingwave.md  slatedb.md  tikv.md
src/: main.rs  markdown.rs  spec.rs  utils.rs
templates/: README.md.tmpl  README.tmpl  library.tmpl  project.tmpl
