[package]
description = "RBIR stands for Rewrite Bigdata in Rust. RBIR aims to create a big data ecosystem using Rust."
edition = "2021"
license = "Apache-2.0"
name = "rbir"
version = "0.0.0"

[dependencies]
anyhow = "1.0.89"
octocrab = "0.39.0"
serde = { version = "1", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1.4.1"
